Add bower require. Add express static folder settings for stylesheets and bower clients.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,6 +2,12 @@
 <html>
 	<head>
 		<title>Mean App</title>
+		<link href="/stylesheets/print.css" media="screen, projection" rel="stylesheet" type="text/css" />
+		<link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+		<!--[if IE]>
+			<link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+		<![endif]-->
+		<script type="text/javascript" src="/client/bower_components/require/build/require.min.js"></script>
 	</head>
 	<body>
 		<% if (!user) { %>
