--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,13 +7,14 @@
 	<body>
 		<% if (!user) { %>
 			<p>
-			<a href="/">Home</a> | 
-			<a href="/login">Log In</a>
+				<a href="/">Home</a> |
+				<a href="/login">Log In</a> |
+				<a href="/register">Register</a>
 			</p>
 		<% } else { %>
 			<p>
-			<a href="/">Home</a> | 
-			<a href="/account">Account</a> | 
+			<a href="/">Home</a> |
+			<a href="/account">Account</a> |
 			<a href="/logout">Log Out</a>
 			</p>
 		<% } %>
